[gd_scene load_steps=3 format=3 uid="uid://c8q1xr6j2yvdgx"]

[ext_resource type="Script" path="res://scripts/ui/chess_info_panel.gd" id="1_yvnqm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jnxu"]
bg_color = Color(0.12549, 0.12549, 0.12549, 0.901961)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.301961, 0.301961, 0.301961, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 4
shadow_offset = Vector2(2, 2)

[node name="ChessInfoPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 0)
offset_right = 300.0
offset_bottom = 400.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8jnxu")
script = ExtResource("1_yvnqm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "棋子名称"
horizontal_alignment = 1

[node name="TypeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "类型 - 稀有度"
horizontal_alignment = 1

[node name="StarContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AbilitiesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SynergiesContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="EquipmentContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
